--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -23,12 +23,10 @@
   <!-- AdminLTE Skins. Choose a skin from the css/skins
 	   folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+  <link rel="stylesheet" href="plugins/iCheck/all.css">
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
   <script src="IE 9/html5shiv.min.js"></script>
-  <script src="IE 9/respond.min.js"></script>
-  <![endif]-->
+  <script src="IE 9/respond.min.js"></script><![endif]-->
   <style>
   html,body,.skin-blue .wrapper{background-color: #f1f1f1; min-height: 100%;}
   p{margin: 0;}
@@ -121,6 +119,12 @@
           <div class="auto hidden" id="auto_contrast" style="width: 94%;z-index: 99999;">
           </div>
         </div>
+        <div class="col-sm-6 form-group no-padding no-margin">
+          	<label><input type="checkbox" class="minimal-red" id="cbClickContrast" value="cb" checked><span style="padding-left: 10px;">C端+小B端</span></label>
+        </div>
+        <div class="col-sm-6 form-group no-padding no-margin">
+          	<label><input type="checkbox" class="minimal-red" id="maxbClickContrast" value="maxb" checked><span style="padding-left: 10px;">大B端</span></label>
+        </div>
 		<div class="col-sm-12 text-center no-padding has-error">
           <button type="button" class="btn btn-block btn-error btn-sm" id="search-btn-contrast" style="margin: 10px 45px 0 auto; font-size: 14px;">加入对比</button>
         </div>
@@ -194,6 +198,12 @@
 							<button type="button" name="search" id="search-btn2" class="btn btn-flat"><i class="fa fa-search"></i></button>
 						</span>
                 </div>
+                <div class="col-sm-6 form-group no-padding no-margin">
+		          	<label><input type="checkbox" class="minimal-red" id="cbClick" value="cb" checked><span style="padding-left: 10px;">C端+小B端</span></label>
+		        </div>
+		        <div class="col-sm-6 form-group no-padding no-margin">
+		          	<label><input type="checkbox" class="minimal-red" id="maxbClick" value="maxb" checked><span style="padding-left: 10px;">大B端</span></label>
+		        </div>
               </form>
             </div>
 			<div class="dmodule1 data_module1" id="data_module1">
@@ -1179,6 +1189,7 @@
 <script>
 	var xData_month = [];
 	var yData_month = [];
+	var yData_month_target = [];
 	var chart6;
 	var chart6_option;
 	function chartresize3(){
@@ -1278,7 +1289,7 @@
 				height: '30',
 				xAxisIndex: [0],
 				bottom: '30',
-				start: '10',
+				start: '0',
 				end: '100',
 				handleIcon: 'path://M306.1,413c0,2.2-1.8,4-4,4h-59.8c-2.2,0-4-1.8-4-4V200.8c0-2.2,1.8-4,4-4h59.8c2.2,0,4,1.8,4,4V413z',
 				handleSize: '110%',
@@ -1292,7 +1303,6 @@
 			series: [{
 				name: "总数",
 				type: "line",
-				stack: "总量",
 				symbolSize:10,
 				symbol:'circle',
 				itemStyle: {
@@ -1309,6 +1319,23 @@
 					}
 				},
 				data:yData_month
+			},
+			{
+				name: "总数",
+				type: "line",
+				symbolSize:10,
+				symbol:'circle',
+				itemStyle: {
+					normal: {
+	                  color: '#000',
+	                  barBorderRadius: 0,
+	                  lineStyle:{
+	                    width:2,
+	                    type:'dotted'  //'dotted'虚线 'solid'实线
+	                  }
+	                }
+				},
+				data:yData_month_target
 			},
 			]
 		}
@@ -1421,46 +1448,64 @@
 	  timeTicket=setInterval(loadtime, 5000);
 	  
 	  $("#search-btn1").click(function(){
-		  chartresize1();
-		  chartresize2();
-		  chartresize3();
-		  chartresize4();
-		  search_manual_k();
-		  timeTicket=setInterval(loadtime, 5000);
+		 excuteChart();
 	 });
 	  $("#search-btn2").click(function(){
-		  chartresize1();
-		  chartresize2();
-		  chartresize3();
-		  chartresize4();
-		  search_manual_k();
-		  timeTicket=setInterval(loadtime, 5000);
+		 excuteChart();
 	 }); 
-	$("#deptSelect").change(function(){
-		  chartresize1();
-		  chartresize2();
-		  chartresize3();
-		  chartresize4();
-		  search_manual_k();
-		  timeTicket=setInterval(loadtime, 5000);
+	 $("#deptSelect").change(function(){
+		 excuteChart();
 	 });
-	$("#channelSelect").change(function(){
-		  chartresize1();
-		  chartresize2();
-		  chartresize3();
-		  chartresize4();
-		  search_manual_k();
-		  timeTicket=setInterval(loadtime, 5000);
+	 $("#channelSelect").change(function(){
+		 excuteChart();
 	 });
-	  $("#citySelect").change(function(){
-		  chartresize1();
-		  chartresize2();
-		  chartresize3();
-		  chartresize4();
-		  search_manual_k();
-		  timeTicket=setInterval(loadtime, 5000);
+	 $("#citySelect").change(function(){
+		 excuteChart();
 	 });
-	  
+	 //小B端iCheck
+	 $('#cbClick').on('ifChecked', function(event){ //ifChecked 事件应该在插件初始化之前绑定 
+		 iCheckStr = $(this).val();
+		 excuteChart();
+	 });
+	 $('#cbClick').on('ifUnchecked', function(event){
+		 iCheckStr = "";
+		 excuteChart();
+	 });
+	 $('#cbClick').iCheck({
+	  	checkboxClass: 'icheckbox_minimal-red'
+	 });
+	 //大B端iCheck
+	 $('#maxbClick').on('ifChecked', function(event){ //ifChecked 事件应该在插件初始化之前绑定 
+		 iCheckMaxStr = $(this).val();
+		 excuteChart();
+	 });
+	 $('#maxbClick').on('ifUnchecked', function(event){
+		 iCheckMaxStr = "";
+		 excuteChart();
+	 });
+	 $('#maxbClick').iCheck({
+	  	checkboxClass: 'icheckbox_minimal-red'
+	 });
+	 //悬浮框小B端iCheck
+	 $('#cbClickContrast').on('ifChecked', function(event){ //ifChecked 事件应该在插件初始化之前绑定 
+		 iCheckContrastStr = $(this).val();
+	 });
+	 $('#cbClickContrast').on('ifUnchecked', function(event){
+		 iCheckContrastStr = "";
+	 });
+	 $('#cbClickContrast').iCheck({
+	  	checkboxClass: 'icheckbox_minimal-red'
+	 });
+	 //悬浮框大B端iCheck	 
+	 $('#maxbClickContrast').on('ifChecked', function(event){ //ifChecked 事件应该在插件初始化之前绑定 
+		 iCheckContrastMaxStr = $(this).val();
+	 });
+	 $('#maxbClickContrast').on('ifUnchecked', function(event){
+		 iCheckContrastMaxStr = "";
+	 });
+	 $('#maxbClickContrast').iCheck({
+	  	checkboxClass: 'icheckbox_minimal-red'
+	 });
 	  //＋对比
 	  $("#search-btn-add").click(function(){
 		  var labelName1 = $("#label_manual_first").html();
@@ -1616,11 +1661,11 @@
 	  $("#contrast").click(function(){
 		  var url = "";
 		  if(target==0){
-		  	url = "index_K_contrast.html?t="+encode64('0')+"&nameStr1="+encode64(nameStr1)+"&nameStr2="+encode64(nameStr2)+"&nameStr3="+encode64(nameStr3)+"&#ff";
+		  	url = "index_K_contrast.html?t="+encode64('0')+"&nameStr1="+encode64(nameStr1)+"&nameStr2="+encode64(nameStr2)+"&nameStr3="+encode64(nameStr3)+"&icheck="+encode64(iCheckContrastStr)+"&icheckmax="+encode64(iCheckContrastMaxStr)+"&#ff";
 		  }else if(target==1){
-		  	url = "index_K_contrast.html?t="+encode64(1)+"&s=&sn=&c=cn="+encode64(pageStatusInfo.cityName)+"&e=&r=&nameStr1="+encode64(nameStr1)+"&nameStr2="+encode64(nameStr2)+"&nameStr3="+encode64(nameStr3)+"&#ff";
+		  	url = "index_K_contrast.html?t="+encode64(1)+"&s=&sn=&c=cn="+encode64(pageStatusInfo.cityName)+"&e=&r=&nameStr1="+encode64(nameStr1)+"&nameStr2="+encode64(nameStr2)+"&nameStr3="+encode64(nameStr3)+"&icheck="+encode64(iCheckContrastStr)+"&icheckmax="+encode64(iCheckContrastMaxStr)+"&#ff";
 		  }else{
-			  url = "index_K_contrast.html?t="+encode64('0')+"&nameStr1="+encode64(nameStr1)+"&nameStr2="+encode64(nameStr2)+"&nameStr3="+encode64(nameStr3)+"&#ff";
+			  url = "index_K_contrast.html?t="+encode64('0')+"&nameStr1="+encode64(nameStr1)+"&nameStr2="+encode64(nameStr2)+"&nameStr3="+encode64(nameStr3)+"&icheck="+encode64(iCheckContrastStr)+"&icheckmax="+encode64(iCheckContrastMaxStr)+"&#ff";
 		  }
 		  window.open(url,"index_K_contrast"); 
 	  });
@@ -1762,7 +1807,7 @@
   
   function initMonthData(){
 	    var curMonth = now.getFullYear()+'-'+(now.getMonth()+1);
-	    var months = getYearAndMonth('2017-7-1',curMonth);
+	    var months = getYearAndMonth('2017-12-1',curMonth);
 		doManager("chartStatManager","queryTurnoverByMonth",[shareChartStatDto],
 			function(data,textStatus,XmlHttpRequest){
 				if (data.result) {
@@ -1772,9 +1817,22 @@
 					$(jsonData).each(function(index,element){
 						var indexTemp = jQuery.inArray(element.month_time,months);
 						yData_month[indexTemp]=element.month_amount;
-               	});
+               		});
 					chart6_option.xAxis[0].data=xData_month;
 					chart6_option.series[0].data=yData_month;
+				}
+		},false);
+		
+		doManager("chartStatManager","queryTargetByMonth",[shareChartStatDto],
+			function(data,textStatus,XmlHttpRequest){
+				if (data.result) {
+					var jsonData = $.fromJSON(data.data);
+					yData_month_target = new Array(months.length+1).join(0).split('');
+					$(jsonData).each(function(index,element){
+						var indexTemp = jQuery.inArray(element.month_time,months);
+						yData_month_target[indexTemp]=element.month_amount;
+               		});
+					chart6_option.series[1].data=yData_month_target;
 					chart6.setOption(chart6_option);
 				}
 		});
@@ -2157,7 +2215,19 @@
 		
 	}
   
+	var iCheckStr = "cb";
+	var iCheckMaxStr = "maxb";
 	function getShareParam(){
+		 var cLabel=0;
+		 var maxBLabel=0;
+		 var smallBLabel=0;
+		 if(iCheckStr=='cb') {
+			 cLabel=1;
+			 smallBLabel=1;
+		 }
+		 if(iCheckMaxStr=='maxb') {
+			 maxBLabel=1;
+		 }
 		 var storeno = $("#store_id_manual").val()==""?null:$("#store_id_manual").val();
 		  var cityName = $("#citySelect  option:selected").val();
 		  if(cityName!="" && cityName!=undefined){
@@ -2178,15 +2248,30 @@
 	    	  channelname = null;
 	      }
 		  
-		  return shareChartStatDto = {
+		  return shareChartStatDto = {				
 				storeno:storeno,
 				cityname:cityName,
 				deptname:deptname,
-				channelname:channelname	
+				channelname:channelname,
+				cLabel:cLabel,
+				maxBLabel:maxBLabel,
+				smallBLabel:smallBLabel
 			}
 	}
 	
+	var iCheckContrastStr = "cb";
+	var iCheckContrastMaxStr = "maxb";
 	function getShareParamContrast(){
+		 var cLabel=0;
+		 var maxBLabel=0;
+		 var smallBLabel=0;
+		 if(iCheckContrastStr=='cb') {
+			 cLabel=1;
+			 smallBLabel=1;
+		 }
+		 if(iCheckContrastMaxStr=='maxb') {
+			 maxBLabel=1;
+		 }
 		 var storeno = $("#store_id_manual_contrast").val()==""?null:$("#store_id_manual_contrast").val();
 		  var cityName = $("#citySelectContrast  option:selected").val();
 		  if(cityName!="" && cityName!=undefined){
@@ -2211,7 +2296,10 @@
 				storeno:storeno,
 				cityname:cityName,
 				deptname:deptname,
-				channelname:channelname	
+				channelname:channelname,
+				cLabel:cLabel,
+				maxBLabel:maxBLabel,
+				smallBLabel:smallBLabel
 			}
 	}
 	
@@ -2272,6 +2360,7 @@
 		  //月GMV
 		  xData_month = [];
 		  yData_month = [];
+		  yData_month_target = [];
 		  initMonthData();
 		  //占比营业额
 		  initOnlineOfflineTurnover();
@@ -2279,6 +2368,15 @@
 		  dataBJ = [];
 		  initScatterplot();		  
     }
+	
+	function excuteChart(){
+		chartresize1();
+	  	chartresize2();
+	  	chartresize3();
+	  	chartresize4();
+	  	search_manual_k();
+	  	timeTicket=setInterval(loadtime, 5000);
+	}
 	
 	function changeMoney (x) {
 	    x=x/10000;
