修改营业额查询表为ds_ope_gmv

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -1742,7 +1742,7 @@
 				if (data.result) {
 					var jsonData = $.fromJSON(data.data);
 					curMonthData = jsonData.month_amount;
-					$("#curMonthGMV").html(changeMoney(parseInt(curMonthData)+parseInt(curDayGMV)));
+					$("#curMonthGMV").html(changeMoney(parseInt(curMonthData)));
 				}
 		});
 	} 
