删除复选框

--- a/WebContent/data_access/human_store_fwzy_list.html
+++ b/WebContent/data_access/human_store_fwzy_list.html
@@ -579,7 +579,7 @@ var p_citySelect = decode64(getUrlParamByKey("citySelect"));
     <div id="centerQueryGridContainer" class="panel panel-primary" queryid="humanresourcesfwzyQuery" operators="$pmspage.opArr"
          titleAlign="center" fnRender="renderColumns" searchDiv="conditionsDiv" showno="false"
          showsearch="false" showpaging="true" showdisplay="false" showprint="false" autoload="false"
-         showcheckbox="true" showRidaoButton="true" usecache="true" showsearch="false" showtitle="true"></div>
+         showcheckbox="flase" showRidaoButton="true" usecache="true" showsearch="false" showtitle="true"></div>
 	
 	
 	
