--- a/WebContent/notice/notice_send.html
+++ b/WebContent/notice/notice_send.html
@@ -371,6 +371,9 @@ function showTemplateInfo(t){
     
     //重置收信人
     function resetReceive(){
+    	selectCity = null;
+    	selectStore = null;
+    	selectZw=null;
     	$("#receive_city").html('<div class="tag" id="allCity">全部</div>');
     	$("#receive_store").html('<div class="tag" id="allStore">全部</div>');
     	$("#receive_zw").html('<div class="tag" id="allZW">全部</div>');
