--- a/WebContent/crm/index_K_contrast.html
+++ b/WebContent/crm/index_K_contrast.html
@@ -2026,6 +2026,14 @@ var chart4_option;
 		});
 		
 		shareChartStatDto = getShareParam();
+		var targetCityname = shareChartStatDto.cityname;
+		if(targetCityname!='' && targetCityname!=null){
+			if(targetCityname=="黔东南州"){
+				shareChartStatDto.cityname="黔东南苗族侗族自治州";
+		  	}else{
+		  		shareChartStatDto.cityname=targetCityname.substring(0,targetCityname.length-1);
+		    }
+		}
 		doManager("chartStatManager","queryTargetByMonth",[shareChartStatDto],
 			function(data,textStatus,XmlHttpRequest){
 				if (data.result) {
