--- a/WebContent/crm/index_K_contrast.html
+++ b/WebContent/crm/index_K_contrast.html
@@ -126,12 +126,6 @@
                   <div class="auto hidden" id="auto" style="width: 94%;z-index: 99999;">
                   </div>
                 </div>
-                <div class="col-sm-7 form-group no-padding no-margin">
-		          	<label><input type="checkbox" class="minimal-red" id="cbClick" value="cb"><span style="padding-left: 10px;">C端+小B端</span></label>
-		        </div>
-		        <div class="col-sm-5 form-group no-padding no-margin">
-		          	<label><input type="checkbox" class="minimal-red" id="maxbClick" value="maxb"><span style="padding-left: 10px;">大B端</span></label>
-		        </div>
                 <div class="col-sm-12 col-xs-12 text-center no-padding has-error">
 		          <button type="button" class="btn btn-block btn-error btn-sm" id="search-btn-contrast" style="margin: 10px auto 0 auto; font-size: 14px;">加入对比</button>
 		        </div>
@@ -261,8 +255,6 @@ var cityname = decode64(getUrlParamByKey("cn"));//城市名称
 var nameStr1=decode64(getUrlParamByKey("nameStr1"));
 var nameStr2=decode64(getUrlParamByKey("nameStr2"));
 var nameStr3=decode64(getUrlParamByKey("nameStr3"));
-var iCheckStr = decode64(getUrlParamByKey("icheck"));
-var iCheckMaxStr = decode64(getUrlParamByKey("icheckmax"));
 
 //   var myChart1 = echarts.init(document.getElementById('main4'));
 
@@ -918,7 +910,6 @@ var chart4_option;
 <script>
 	var xData_month = [];
 	var yData_month = [];
-	var yData_month_target = [];
 	var xData_month2 = [];
 	var yData_month2 = [];
 	var xData_month3 = [];
@@ -946,7 +937,7 @@ var chart4_option;
 				},
 			},
       legend: {
-        data:['条件1','条件2','条件3','营业指标'],
+        data:['条件1','条件2','条件3'],
         x: 'right'
       },
 			grid: {
@@ -1086,23 +1077,6 @@ var chart4_option;
 	        },
 	        data:yData_month3
 	      },
-			{
-				name: "营业指标",
-				type: "line",
-				symbolSize:10,
-				symbol:'circle',
-				itemStyle: {
-					normal: {
-	                  color: '#000',
-	                  barBorderRadius: 0,
-	                  lineStyle:{
-	                    width:2,
-	                    type:'dotted'  //'dotted'虚线 'solid'实线
-	                  }
-	                }
-				},
-				data:yData_month_target
-			},
 		]
 		}
 
@@ -1212,37 +1186,6 @@ var chart4_option;
 		  selectionExcute();
 	 });
 	  
-	 //C+小B端iCheck
-	 if(iCheckStr=='cb'){
-		 $('#cbClick').attr("checked","checked");
-	 }
-	 $('#cbClick').on('ifChecked', function(event){ //ifChecked 事件应该在插件初始化之前绑定 
-		 iCheckStr = $(this).val();
-		 selectionExcute();
-	 });
-	 $('#cbClick').on('ifUnchecked', function(event){
-		 iCheckStr = "";
-		 selectionExcute();
-	 }); 
-	 $('#cbClick').iCheck({
-	  	checkboxClass: 'icheckbox_minimal-red'
-	 });
-	 //大B端iCheck
-	 if(iCheckMaxStr=='maxb'){
-		 $('#maxbClick').attr("checked","checked");
-	 }
-	 $('#maxbClick').on('ifChecked', function(event){ //ifChecked 事件应该在插件初始化之前绑定 
-		 iCheckMaxStr = $(this).val();
-		 selectionExcute();
-	 });
-	 $('#maxbClick').on('ifUnchecked', function(event){
-		 iCheckMaxStr = "";
-		 selectionExcute();
-	 }); 
-	 $('#maxbClick').iCheck({
-	  	checkboxClass: 'icheckbox_minimal-red'
-	 });
-	 
 	  $("#contrast").click(function(){
 		  if(shareChartStatDto1==null && shareChartStatDto2==null && shareChartStatDto3==null){
 			  crm_alert(0,"请选择要对比的条件！");
@@ -1283,7 +1226,6 @@ var chart4_option;
 		  
 		  xData_month = [];
 		  yData_month = [];
-		  yData_month_target = [];
 		  xData_month2 = [];
 		  yData_month2 = [];
 		  xData_month3 = [];
@@ -1294,7 +1236,6 @@ var chart4_option;
 		  chart6_option.series[1].data=yData_month2;
 // 		  chart6_option.xAxis[2].data=xData_month3;
 		  chart6_option.series[2].data=yData_month3;
-		  chart6_option.series[3].data=yData_month_target;
 		  chart6.setOption(chart6_option);
 		  
 		  shareChartStatDto1=null;
@@ -1509,24 +1450,12 @@ var chart4_option;
 	}
    
 	function getShareParam(){
-		 var cLabel=0;
-		 var smallBLabel=0;
-		 var maxBLabel=0;
-		 if(iCheckStr=='cb') {
-			 cLabel=1;
-			 smallBLabel=1;
-		 }
-		 if(iCheckMaxStr=='maxb') {
-			 maxBLabel=1;
-		 }
 		  var storeno = $("#store_id_manual").val()==""?null:$("#store_id_manual").val();
 		  var cityName = $("#citySelect  option:selected").val();
 		  if(cityName!="" && cityName!=undefined){
 		    if(cityName=="黔东南苗族侗族自治州"){
-		    	cityName="黔东南州";
-		  	}else{
-		    	cityName=cityName+"市";
-		    	}
+		    	cityName="黔东南";
+		  	}
 		  }else{
 		    cityName = null;
 		  }
@@ -1543,10 +1472,7 @@ var chart4_option;
 				storeno:storeno,
 				cityname:cityName,
 				deptname:deptname,
-				channelname:channelname,
-				cLabel:cLabel,
-				maxBLabel:maxBLabel,
-			 	smallBLabel:smallBLabel
+				channelname:channelname
 			}
 	}
 	
@@ -1557,37 +1483,7 @@ var chart4_option;
 		var labelName3 = $("#label_manual_third").val();		
 		var nameStrTemp = "";
 		var shareChartStatDtoTemp = getShareParam();
-		if(shareChartStatDtoTemp!=null && iCheckStr==''){
-			shareChartStatDtoTemp.cLabel=0;
-			shareChartStatDtoTemp.smallBLabel=0;
-		}
-		if(shareChartStatDto1!=null){
-			shareChartStatDto1.cLabel=0;
-			shareChartStatDto1.smallBLabel=0;
-		}
-		if(shareChartStatDto2!=null){
-			shareChartStatDto2.cLabel=0;
-			shareChartStatDto2.smallBLabel=0;
-		}
-		if(shareChartStatDto3!=null){
-			shareChartStatDto3.cLabel=0;
-			shareChartStatDto3.smallBLabel=0;
-		}
 		
-		if(shareChartStatDtoTemp!=null && iCheckMaxStr==''){
-			shareChartStatDtoTemp.maxBLabel=0;
-		}
-		if(shareChartStatDto1!=null){
-			shareChartStatDto1.maxBLabel=0;
-		}
-		if(shareChartStatDto2!=null){
-			shareChartStatDto2.cLabel=0;
-			shareChartStatDto2.maxBLabel=0;
-		}
-		if(shareChartStatDto3!=null){
-			shareChartStatDto3.cLabel=0;
-			shareChartStatDto3.maxBLabel=0;
-		}
 		var deptName = shareChartStatDtoTemp.deptname==null?'全部事业群':shareChartStatDtoTemp.deptname;
     	var channelName = shareChartStatDtoTemp.channelname==null?'全部频道':shareChartStatDtoTemp.channelname;
     	var cityName = shareChartStatDtoTemp.cityname==null?'全部城市':shareChartStatDtoTemp.cityname;
@@ -1635,7 +1531,6 @@ var chart4_option;
 		  //月GMV
 		  xData_month = [];
 		  yData_month = [];
-		  yData_month_target = [];
 		  xData_month2 = [];
 		  yData_month2 = [];
 		  xData_month3 = [];
@@ -1648,13 +1543,6 @@ var chart4_option;
   var hourData3 = [];
   function initHourData(){
   		var nowHour = now.getHours();
-  		if(shareChartStatDto1!=null && iCheckStr=='cb') {
-	    	shareChartStatDto1.cLabel=1;
-	    	shareChartStatDto1.smallBLabel=1;
-	    }
-  		if(shareChartStatDto1!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto1.maxBLabel=1;
-	    }
   		if(shareChartStatDto1!=null && shareChartStatDto1.cityname=="全部城市"){
   			shareChartStatDto1.cityname = '';
   		}
@@ -1677,13 +1565,6 @@ var chart4_option;
  				}
  		});
  		
- 		if(shareChartStatDto2!=null && iCheckStr=='cb') {
-	    	shareChartStatDto2.cLabel=1;
-	    	shareChartStatDto2.smallBLabel=1;
-	    }
- 		if(shareChartStatDto2!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto2.maxBLabel=1;
-	    }
  		if(shareChartStatDto2!=null && shareChartStatDto2.cityname=="全部城市"){
   			shareChartStatDto2.cityname = '';
   		}
@@ -1706,13 +1587,6 @@ var chart4_option;
  				}
  		});
  		
- 		if(shareChartStatDto3!=null && iCheckStr=='cb') {
-	    	shareChartStatDto3.cLabel=1;
-	    	shareChartStatDto3.smallBLabel=1;
-	    }
- 		if(shareChartStatDto3!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto3.maxBLabel=1;
-	    }
  		if(shareChartStatDto3!=null && shareChartStatDto3.cityname=="全部城市"){
   			shareChartStatDto3.cityname = '';
   		}
@@ -1738,13 +1612,6 @@ var chart4_option;
   
   function initDayData(){
 	  	var curDay = getCurDay();
-	  	if(shareChartStatDto1!=null && iCheckStr=='cb') {
-	    	shareChartStatDto1.cLabel=1;
-	    	shareChartStatDto1.smallBLabel=1;
-	    }
-	  	if(shareChartStatDto1!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto1.maxBLabel=1;
-	    }
 	  	if(shareChartStatDto1!=null && shareChartStatDto1.cityname=="全部城市"){
   			shareChartStatDto1.cityname = '';
   		}
@@ -1769,13 +1636,6 @@ var chart4_option;
 				}
 		});
 	
-	  	if(shareChartStatDto2!=null && iCheckStr=='cb') {
-	    	shareChartStatDto2.cLabel=1;
-	    	shareChartStatDto2.smallBLabel=1;
-	    }
-	  	if(shareChartStatDto2!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto2.maxBLabel=1;
-	    }
 	  	if(shareChartStatDto2!=null && shareChartStatDto2.cityname=="全部城市"){
 			shareChartStatDto2.cityname = '';
 		}
@@ -1800,13 +1660,6 @@ var chart4_option;
 				}
 		});
 	  
-	  	if(shareChartStatDto3!=null && iCheckStr=='cb') {
-	    	shareChartStatDto3.cLabel=1;
-	    	shareChartStatDto3.smallBLabel=1;
-	    }
-	  	if(shareChartStatDto3!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto3.maxBLabel=1;
-	    }
 	  	if(shareChartStatDto3!=null && shareChartStatDto3.cityname=="全部城市"){
 			shareChartStatDto3.cityname = '';
 		}
@@ -1836,13 +1689,6 @@ var chart4_option;
   var weekData2 = [];
   var weekData3 = [];
   function initWeekData(){
-	  	if(shareChartStatDto1!=null && iCheckStr=='cb') {
-	    	shareChartStatDto1.cLabel=1;
-	    	shareChartStatDto1.smallBLabel=1;
-	    }
-	  	if(shareChartStatDto1!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto1.maxBLabel=1;
-	    }
 	  	if(shareChartStatDto1!=null && shareChartStatDto1.cityname=="全部城市"){
 			shareChartStatDto1.cityname = '';
 		}
@@ -1865,13 +1711,6 @@ var chart4_option;
 				}
 		},false);
 		
-		if(shareChartStatDto2!=null && iCheckStr=='cb') {
-	    	shareChartStatDto2.cLabel=1;
-	    	shareChartStatDto2.smallBLabel=1;
-	    }
-		if(shareChartStatDto2!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto2.maxBLabel=1;
-	    }
 		if(shareChartStatDto2!=null && shareChartStatDto2.cityname=="全部城市"){
   			shareChartStatDto2.cityname = '';
   		}
@@ -1894,13 +1733,6 @@ var chart4_option;
 				}
 		});
 		
-		if(shareChartStatDto3!=null && iCheckStr=='cb') {
-	    	shareChartStatDto3.cLabel=1;
-	    	shareChartStatDto3.smallBLabel=1;
-	    }
-		if(shareChartStatDto3!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto3.maxBLabel=1;
-	    }
 		if(shareChartStatDto3!=null && shareChartStatDto3.cityname=="全部城市"){
   			shareChartStatDto3.cityname = '';
   		}
@@ -1927,13 +1759,6 @@ var chart4_option;
 	} 
   
   function initMonthData(){
-	    if(shareChartStatDto1!=null && iCheckStr=='cb') {
-	    	shareChartStatDto1.cLabel=1;
-	    	shareChartStatDto1.smallBLabel=1;
-	    }
-	    if(shareChartStatDto1!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto1.maxBLabel=1;
-	    }
 	    if(shareChartStatDto1!=null && shareChartStatDto1.cityname=="全部城市"){
   			shareChartStatDto1.cityname = '';
   		}
@@ -1961,13 +1786,6 @@ var chart4_option;
 				}
 		});
 		
-		if(shareChartStatDto2!=null && iCheckStr=='cb') {
-	    	shareChartStatDto2.cLabel=1;
-	    	shareChartStatDto2.smallBLabel=1;
-	    }
-		if(shareChartStatDto2!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto2.maxBLabel=1;
-	    }
 		if(shareChartStatDto2!=null && shareChartStatDto2.cityname=="全部城市"){
   			shareChartStatDto2.cityname = '';
   		}
@@ -1993,13 +1811,6 @@ var chart4_option;
 				}
 		});
 		
-		if(shareChartStatDto3!=null && iCheckStr=='cb') {
-	    	shareChartStatDto3.cLabel=1;
-	    	shareChartStatDto3.smallBLabel=1;
-	    }
-		if(shareChartStatDto3!=null && iCheckMaxStr=='maxb') {
-	    	shareChartStatDto3.maxBLabel=1;
-	    }
 		if(shareChartStatDto3!=null && shareChartStatDto3.cityname=="全部城市"){
   			shareChartStatDto3.cityname = '';
   		}
@@ -2024,30 +1835,6 @@ var chart4_option;
 					chart6.setOption(chart6_option);
 				}
 		});
-		
-		shareChartStatDto = getShareParam();
-		var targetCityname = shareChartStatDto.cityname;
-		if(targetCityname!='' && targetCityname!=null){
-			if(targetCityname=="黔东南州"){
-				shareChartStatDto.cityname="黔东南苗族侗族自治州";
-		  	}else{
-		  		shareChartStatDto.cityname=targetCityname.substring(0,targetCityname.length-1);
-		    }
-		}
-		doManager("chartStatManager","queryTargetByMonth",[shareChartStatDto],
-			function(data,textStatus,XmlHttpRequest){
-				if (data.result) {
-					var jsonData = $.fromJSON(data.data);
-					yData_month_target = new Array(months.length+1).join(0).split('');
-					$(jsonData).each(function(index,element){
-						var indexTemp = jQuery.inArray(element.month_time,months);
-						yData_month_target[indexTemp]=element.month_amount;
-               		});
-					chart6_option.series[3].data=yData_month_target;
-					chart6.setOption(chart6_option);
-				}
-		});
-		
 	} 
   
   function excuteChart(){
