总部首页概要统计改为线下网络体系并加入更多,近7日GMV走势加入更多的链接

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -247,7 +247,7 @@
       <!--城市门店信息-->
       <div class="info_head">
         <div class="box no-border">
-          <div class="box-header h4"><strong id="currentCity"></strong></div>
+          <div class="box-header h4" id="gaiyao"><strong id="currentCity"></strong></div>
           <div class="box-body no-padding" id="mdxx" style="margin-top: -5px;">
             <dl class="dl-horizontal pull-left" id="gaiyaotongji" style="width: 100%;">
               <dt id="cityT">城市</dt>
@@ -346,6 +346,7 @@
         <div class="col-sm-3 no-padding">
         <div id="main1" style="width: 100%;height:400px;"></div>
         <div id="main12" style="width: 100%;height:200px;"></div>
+        <div class="gengduo" id="gmv_rank_more" style=""><a>更多</a></div>
         <div class="gengduo" id="city_gmv_more" style="top: 405px;"><a>更多</a></div>
       </div>
       <div class="col-sm-6 no-padding" style="height: 400px;">
