--- a/WebContent/notice/notice_send.html
+++ b/WebContent/notice/notice_send.html
@@ -87,12 +87,17 @@
 	function showAlt(tag){
 		if(tag=="sms"){
 			layer.tips('手机短信', '#sms_img', {
-				  tips: [1, '#f1c524'], //还可配置颜色
+				  tips: [1, '#f7c539'], //还可配置颜色
 				  time: 2000
 				});
 		}else if(tag=="app"){
 			layer.tips('国安数据APP', '#app_img', {
-				  tips: [1, '#e44508'], //还可配置颜色
+				  tips: [1, '#b7333f'], //还可配置颜色
+				  time: 2000
+				});
+		}else if(tag=="mini_APP"){
+			layer.tips('国安数据微信小程序', '#mini_img', {
+				  tips: [1, '#b7333f'], //还可配置颜色
 				  time: 2000
 				});
 		}
@@ -517,13 +522,15 @@ function showNoticeWay(){
 	if(grade==1){//高级
 		$($("#notice_way").children("img")[0]).show();
 		$($("#notice_way").children("img")[1]).show();
+		$($("#notice_way").children("img")[2]).show();
 	}else if(grade==2){//中级
 		$($("#notice_way").children("img")[0]).hide();
 		$($("#notice_way").children("img")[1]).show();
+		$($("#notice_way").children("img")[2]).show();
 	}else if(grade==3){//低级
 		$($("#notice_way").children("img")[0]).hide();
 		$($("#notice_way").children("img")[1]).hide();
-		
+		$($("#notice_way").children("img")[2]).hide();
 	}
 	
 }
@@ -566,7 +573,7 @@ function showNoticeWay(){
                         <tr>
                             <td style="width:12%">通知方式<span style="color:red"></span></td>
                             <td>
-                               <div id="notice_way" style="height:35px"><img id="sms_img" onmouseover="showAlt('sms')"  src="img/sms.png" height="35" alt="手机短信"/>&nbsp;&nbsp;<img id="app_img" src="img/gasj.png" onmouseover="showAlt('app')" height="35" alt="国安数据APP"/></div>
+                               <div id="notice_way" style="height:35px"><img id="sms_img" onmouseover="showAlt('sms')"  src="img/sms.png" height="35" alt="手机短信"/>&nbsp;&nbsp;<img id="app_img" src="img/gasj.png" onmouseover="showAlt('app')" height="35" alt="国安数据APP"/>&nbsp;&nbsp;<img id="mini_img" src="img/mini.png" onmouseover="showAlt('mini_APP')" height="35" alt="国安数据微信小程序"/></div>
                             </td>
                         </tr>
                          <tr>
