浏览器放大复选框不显示

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -192,12 +192,14 @@
 							<button type="button" name="search" id="search-btn2" class="btn btn-flat"><i class="fa fa-search"></i></button>
 						</span>
                 </div>
-                <div class="col-sm-6 form-group no-padding no-margin">
+                <div class="col-sm-12 no-padding">
+                	<div class="col-sm-6 form-group no-padding no-margin">
 		          	<label><input type="checkbox" class="minimal-red" id="cbClick" value="cb" checked><span style="padding-left: 10px;">C+小B</span></label>
 		        </div>
 		        <div class="col-sm-6 form-group no-padding no-margin">
 		          	<label><input type="checkbox" class="minimal-red" id="maxbClick" value="maxb"><span style="padding-left: 10px;">大B</span></label>
 		        </div>
+               	</div>
               </form>
             </div>
 			<div class="dmodule1 data_module1" id="data_module1">
