--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -1838,13 +1838,19 @@ Date.prototype.format=function(fmt) {
 			function(data,textStatus,XmlHttpRequest){
 				if (data.result) {
 					var jsonData = $.fromJSON(data.data);
-					yData_month_target = new Array(months.length+1).join(0).split('');
-					$(jsonData).each(function(index,element){
-						var indexTemp = jQuery.inArray(element.month_time,months);
-						yData_month_target[indexTemp]=element.month_amount;
-               		});
-					chart6_option.series[1].data=yData_month_target;
-					chart6.setOption(chart6_option);
+					if(jsonData.length!=0){
+						yData_month_target = new Array(months.length+1).join(0).split('');
+						$(jsonData).each(function(index,element){
+							var indexTemp = jQuery.inArray(element.month_time,months);
+							yData_month_target[indexTemp]=element.month_amount;
+	               		});
+						chart6_option.series[1].data=yData_month_target;
+						chart6.setOption(chart6_option);
+					}else{//没有数据时不显示
+						yData_month_target = [];
+						chart6_option.series[1].data=yData_month_target;
+						chart6.setOption(chart6_option);
+					}
 				}
 		});
 		$("#process_div").hide();
